# voice-tic-tac-toe-thingy53

./: .gitignore  CMakeLists.txt  README.md  prj.conf
boards/: thingy53.overlay
model-parameters/: model_metadata.h  model_variables.h
scripts/: build-and-run-firmware  convert-image-to-c.py
src/: main.c
src/include/: black_square_image.h  circle_image.h  cpu_win_text_image.h  cross_image.h  dmic_voice_recognition.h  square_image.h  ssd1327_oled.h  table_image.h  you_win_text_image.h
src/source/: black_square_image.c  black_square_image.cpp  circle_image.cpp  cpu_win_text_image.cpp  cross_image.c  dmic_voice_recognition.cpp  main.c  main.cpp  square_image.c  ssd1327_oled.c  ssd1327_oled.cpp  table_image.c  you_win_text_image.cpp
tflite-model/: tflite_learn_3_compiled.cpp  tflite_learn_3_compiled.h
